# teams-search

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Dockerfile.search  README.md  RELEASE.md  architecture.excalidraw  docker-compose.yml  pyproject.toml  scraper_api.py  search.py  settings.yml
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yaml
config/: Caddyfile  limiter.toml  nginx.conf  sxng_config.yml
