[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teams-search"
version = "1.0.0"
description = "Self-hosted SearXNG search engine with Docker Compose deployment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["flask", "requests", "beautifulsoup4"]

[project.optional-dependencies]
dev = ["searxng"]

[project.scripts]
local-search = "local_searxng.server:run_server"

[tool.setuptools.packages.find]
where = ["."]
